trustfall_core/test_data/tests/valid_queries/coercion_on_edge.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 10) {
        value @output

        successor {
            ... on Prime {
                prime: value @output
            }
        }
    }
}"#,
    arguments: {},
)
