trustfall_core/test_data/tests/parse_errors/coercion_with_sibling_fields.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 10) {
        value @output

        successor {
            succ: name @output
            ... on Prime {
                prime: value @output
            }
        }
    }
}"#,
    arguments: {},
)
